[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/menu/background.png" type="Texture" id=1]
[ext_resource path="res://src/menu/CreditButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/menu/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/menu/PlayButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/menu/HelpButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/menu/SoundButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/menu/logo.png" type="Texture" id=7]
[ext_resource path="res://src/menu/HelpButton.gd" type="Script" id=8]
[ext_resource path="res://assets/menu/background-sound.wav" type="AudioStream" id=9]
[ext_resource path="res://src/menu/Background.gd" type="Script" id=10]
[ext_resource path="res://src/menu/SoundButtonDisabled.tscn" type="PackedScene" id=11]

[node name="Background" type="Node"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 959.629, 538.353 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CreditButton" parent="." instance=ExtResource( 2 )]
margin_left = 808.0
margin_top = 568.0
margin_right = 1136.0
margin_bottom = 714.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../ExitButton")

[node name="ExitButton" parent="." instance=ExtResource( 3 )]
margin_left = 808.0
margin_top = 736.0
margin_right = 1136.0
margin_bottom = 882.0
focus_neighbour_top = NodePath("../CreditButton")
focus_neighbour_bottom = NodePath("../PlayButton")

[node name="PlayButton" parent="." instance=ExtResource( 4 )]
margin_left = 808.0
margin_top = 400.0
margin_right = 820.001
margin_bottom = 546.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../CreditButton")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
reference_path = "res://src/cutscenes/Intro.tscn"
start_focused = true

[node name="HelpButton" parent="." instance=ExtResource( 5 )]
margin_left = 112.0
margin_top = 912.0
margin_right = 261.0
margin_bottom = 1056.0
script = ExtResource( 8 )

[node name="Sound" parent="." instance=ExtResource( 6 )]
margin_left = 1664.0
margin_top = 917.0
margin_right = 1813.0
margin_bottom = 1062.0
rect_pivot_offset = Vector2( 88, 67 )

[node name="SoundDisabled" parent="." instance=ExtResource( 11 )]
margin_left = 1664.13
margin_top = 917.068
margin_right = 1813.13
margin_bottom = 1062.07

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 968, 152 )
texture = ExtResource( 7 )

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
[connection signal="focus_entered" from="CreditButton" to="CreditButton" method="_on_CreditButton_focus_entered"]
[connection signal="mouse_entered" from="CreditButton" to="CreditButton" method="_on_CreditButton_mouse_entered"]
[connection signal="pressed" from="CreditButton" to="CreditButton" method="_on_CreditButton_pressed"]
[connection signal="focus_entered" from="ExitButton" to="ExitButton" method="_on_ExitButton_focus_entered"]
[connection signal="mouse_entered" from="ExitButton" to="ExitButton" method="_on_ExitButton_mouse_entered"]
[connection signal="focus_entered" from="PlayButton" to="PlayButton" method="_on_PlayButton_focus_entered"]
[connection signal="pressed" from="HelpButton" to="HelpButton" method="_on_HelpButton_pressed"]
[connection signal="pressed" from="Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="SoundDisabled" to="." method="_on_SoundDisabled_pressed"]
[connection signal="finished" from="BackgroundSound" to="." method="_on_BackgroundSound_finished"]
